WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193041
AX: String check: "Rule" does not reflect the meaning of the <hr> html tag
https://bugs.webkit.org/show_bug.cgi?id=193041
Summary
AX: String check: "Rule" does not reflect the meaning of the <hr> html tag
chris fleizach
Reported
2018-12-26 18:05:42 PST
EN suggested: line This should be the accessability role description for a horizontal rule <hr> in HTML 4.x. In HTML 5.0 since you can no longer edit certain aspects of it it is called a Thematic Break line. However, it is still represented by a horizontal line separating sections of a website. The important and relevant part of “horizontal rule” is in fact … horizontal, rule being too generic to be relevant in this case. More info:
https://www.w3schools.com/tags/tag_hr.asp
https://developer.mozilla.org/en-US/docs/Web/HTML/Element/hr
https://www.w3schools.com/howto/howto_css_style_hr.asp
----------------------- I think the essence of both “Horizontal rule” and “Thematic break” are in their function of separation, regardless of their horizontal or thematic nature. Therefore, I think “separator” is an accurate way to describe <hr>, which is also specific enough to yield an authentic localization string (as opposed to the ambiguious “line” and “rule”).
Attachments
patch
(3.98 KB, patch)
2018-12-26 18:08 PST
,
chris fleizach
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-sierra
(2.45 MB, application/zip)
2018-12-26 19:09 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-sierra-wk2
(3.00 MB, application/zip)
2018-12-26 19:20 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews116 for mac-sierra
(1.98 MB, application/zip)
2018-12-26 19:59 PST
,
EWS Watchlist
no flags
Details
patch
(4.52 KB, patch)
2018-12-26 22:25 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(4.52 KB, patch)
2018-12-26 22:28 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(5.09 KB, patch)
2018-12-26 23:39 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-12-26 18:05:57 PST
<
rdar://problem/46954090
>
chris fleizach
Comment 2
2018-12-26 18:08:23 PST
Created
attachment 358090
[details]
patch
chris fleizach
Comment 3
2018-12-26 18:08:49 PST
rdar://problem/46630975
EWS Watchlist
Comment 4
2018-12-26 19:09:29 PST
Comment on
attachment 358090
[details]
patch
Attachment 358090
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/10555419
New failing tests: accessibility/roles-exposed.html
EWS Watchlist
Comment 5
2018-12-26 19:09:31 PST
Created
attachment 358092
[details]
Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-12-26 19:20:42 PST
Comment on
attachment 358090
[details]
patch
Attachment 358090
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10555432
New failing tests: accessibility/roles-exposed.html
EWS Watchlist
Comment 7
2018-12-26 19:20:44 PST
Created
attachment 358094
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2018-12-26 19:59:27 PST
Comment on
attachment 358090
[details]
patch
Attachment 358090
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/10555557
New failing tests: accessibility/roles-exposed.html
EWS Watchlist
Comment 9
2018-12-26 19:59:29 PST
Created
attachment 358096
[details]
Archive of layout-test-results from ews116 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-sierra Platform: Mac OS X 10.12.6
chris fleizach
Comment 10
2018-12-26 22:25:12 PST
Created
attachment 358100
[details]
patch
EWS Watchlist
Comment 11
2018-12-26 22:27:40 PST
Attachment 358100
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:10: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 12
2018-12-26 22:28:43 PST
Created
attachment 358101
[details]
patch
chris fleizach
Comment 13
2018-12-26 23:39:43 PST
Created
attachment 358102
[details]
patch
WebKit Commit Bot
Comment 14
2019-01-04 09:18:25 PST
Comment on
attachment 358102
[details]
patch Clearing flags on attachment: 358102 Committed
r239613
: <
https://trac.webkit.org/changeset/239613
>
WebKit Commit Bot
Comment 15
2019-01-04 09:18:27 PST
All reviewed patches have been landed. Closing bug.
James Craig
Comment 16
2019-03-29 17:38:21 PDT
<
rdar://problem/46630975
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug