AX: String check: "Rule" does not reflect the meaning of the <hr> html tag https://bugs.webkit.org/show_bug.cgi?id=193041 <rdar://problem/46954090>

Reviewed by Zalan Bujtas.

Source/WebCore:

* en.lproj/Localizable.strings:
* platform/cocoa/LocalizedStringsCocoa.mm:
(WebCore::AXHorizontalRuleDescriptionText):

LayoutTests:

* accessibility/mac/hr-element-expected.txt:
* platform/mac/accessibility/roles-exposed-expected.txt:
* platform/mac-wk2/accessibility/roles-exposed-expected.txt:


Canonical link: https://commits.webkit.org/207641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239613 268f45cc-cd09-0410-ab3c-d52691b4dbfc